# fastemplate

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/: dependabot.yml  labeler.yml  verify_deps_sync.py
.github/workflows/: backend.yml  triage.yml
backend/: Dockerfile  Dockerfile.test  entrypoint.sh  pyproject.toml
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: router.py
backend/app/api/api_v1/routers/: login.py  users.py
backend/app/core/: config.py  security.py
backend/app/services/: analytics.py  email.py  storage.py
backend/migrations/: README  env.py
backend/migrations/versions/: 2025_05_15_1609-c280e609de6d_init.py
backend/tests/: test_api_workflow.py
docker/: locustfile.py
